Fixed max css with overflow: auto

--- a/css/main.css
+++ b/css/main.css
@@ -93,11 +93,14 @@ body {
     width: 980px;
     margin: 0 auto; }
   section {
-    display: block; }
+    display: block;
+    overflow: hidden; }
   .container {
     width: 925px;
     margin: 0 auto;
     margin-top: 30px; }
+  .box {
+    overflow: auto; }
   .date {
     float: right; }
   .titleContent {
