--- a/sass/_max.scss
+++ b/sass/_max.scss
@@ -10,6 +10,8 @@
 
   section {
     display: block;
+    overflow: hidden;
+    // width: 910px;
   }
 
   .container {
@@ -18,6 +20,9 @@
     margin-top: 30px;
     }
 
+  .box {
+    overflow: auto;
+  }
 
   .date {
     float: right;
@@ -27,6 +32,7 @@
     width: 600px;
     float: right;
     position: relative;
+    // clear: none;
   }
 
 
